# sparkcli

./: .gitignore  README.md  meson.build
.github/workflows/: build.yml
examples/: meson.build
examples/color/: main.c  meson.build
examples/hexdump/: main.c  meson.build
examples/logging/: main.c  meson.build
examples/progress/: main.c  meson.build
examples/table/: main.c  meson.build
examples/tree/: main.c  meson.build
src/: color.c  color.h  hexdump.c  hexdump.h  log.c  log.h  meson.build  progress.c  progress.h  sparkcli.h  table.c  table.h  tree.c  tree.h
src/platform/: console.h  console_common.c  console_other.c  console_windows.c
src/utils/: env.c  env.h  math.h  str.h
